# SciPeer

./: .env.example  .gitignore  CLAUDE.md  TODO.md  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml
api/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
api/alembic/: env.py
api/alembic/versions/: 0001_initial_schema.py  0002_pdf_annotations.py  0003_annotation_text_fields.py  0004_drop_annotation_position_columns.py
api/app/: main.py
api/app/core/: config.py  database.py  deps.py  events.py  redis.py  search.py  security.py  seed_dev.py  storage.py
api/app/doi/: models.py  router.py  schemas.py  service.py
api/app/gamification/: models.py  router.py  schemas.py  service.py
api/app/identity/: models.py  router.py  schemas.py  service.py
api/app/notifications/: models.py  worker.py
api/app/papers/: models.py  router.py  schemas.py  service.py
api/app/reviews/: models.py  router.py  schemas.py  service.py
api/scripts/: gen_keys.py  seed_dev.py
api/tests/: conftest.py
api/tests/reviews/: test_coi.py
docs/: ARCHITECTURE.md  DEVOPS.md  STACK.md
docs/mockup/: openscholar-app.html
docs/superpowers/specs/: 2026-06-08-scipeer-design.md
frontend/: Dockerfile  next.config.ts  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/my-papers/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/reviews/: page.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/lib/: api.ts  types.ts
(+11 files in other folders)
